# NSU-BioInfo

./: .gitignore
task_1/: README.md  sequence_HERC2_homo_sapiens.fasta  sequence_HERC2_mus_musculus.fasta  sequence_OCA2_homo_sapiens.fasta  sequence_OCA2_mus_musculus.fasta
task_2/: README.md  sequence _cellular tumor antigen p53 [Camelus dromedarius].fasta  sequence_P53_galus_galus.fasta  sequence_cellular tumor antigen p53 [Chelonoidis abingdonii].fasta  sequence_cellular tumor antigen p53 [Physeter macrocephalus].fasta  sequence_cellular tumor antigen p53 [Sander lucioperca].fasta  sequence_cellular tumor antigen p53 [Takifugu rubripes].fasta  sequence_cellular tumor antigen p53 [Xenopus tropicalis].fasta  sequence_cellular tumor antigen p53 isoform 2 [Danio rerio].fasta  sequence_cellular tumor antigen p53 isoform X1 [Monodon monoceros].fasta  sequence_cellular tumor antigen p53 isoform X2 [Esox lucius].fasta  sequence_union.fasta
task_3/: Readme.md  test_kedro.py
task_3/new-kedro-project/: pyproject.toml  requirements.txt
task_3/new-kedro-project/conf/base/: catalog.yml  parameters.yml  parameters_mapping.yml
task_3/new-kedro-project/src/new_kedro_project/pipelines/mapping/: __init__.py  nodes.py  pipeline.py
task_3/new-kedro-project/tests/pipelines/mapping/: test_pipeline.py
